# github-backup-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  pagination.rs  rate_limit.rs  retry.rs  types.rs
src/auth/: classic_pat.rs  file_token.rs  fine_grained.rs  github_app.rs  keychain.rs  mod.rs
src/backup/: account.rs  attachments.rs  gists.rs  hooks.rs  issues.rs  labels.rs  milestones.rs  mod.rs  pulls.rs  releases.rs  repositories.rs  security.rs  wiki.rs
src/cli/: args.rs  run.rs
src/filter/: mod.rs
src/git/: mod.rs  subprocess.rs  url.rs
src/incremental/: mod.rs
src/io/: atomic_write.rs  mod.rs  smart_write.rs
src/plugin/: manifest.rs  methods.rs  mod.rs  rpc.rs
